# studienarbeit-parser

./: .gitignore  .travis.yml  ChangeLog.md  README.md  md2html.cabal
src/: Types.hs
